--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link-http": "^1.5.16",
     "expo": "^35.0.0",
+    "graphql": "^14.5.8",
     "native-base": "^2.13.8",
     "react": "16.8.3",
     "react-dom": "16.8.3",
